# qrbg-cpp

./: .gitignore  LICENSE  Makefile.am  QRBG.cpp  QRBG.h  README.rst  autogen.sh  configure.ac  example0.cpp  example1.cpp
src/: QRBG.cpp  QRBG.h
test/: Makefile  example0.cpp  example1.cpp
