AC_INIT([QRBG C++ Library], [0.4.0], [radomir dot stevanovic at gmail dot com], [qrbgcpp], [http://random.irb.hr/])
AC_PREREQ([2.60])

AM_INIT_AUTOMAKE([1.10 no-define foreign])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
LT_INIT

AC_OUTPUT
